--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -3,41 +3,47 @@
   %head
     %meta{charset: "utf-8"}
   %body
-    文通
+    .main
+      %h1 文通
 
-    文通だからこそ、心が通う。
-    スマートフォンを開けば、
-    瞬時に誰かと繋がれる時代。
-    目まぐるしく交わされる
-    コミュニケーションに疲れていませんか。
+      %h2 文通だからこそ、心が通う。
+      %p スマートフォンを開けば、
+      瞬時に誰かと繋がれる時代。
+      目まぐるしく交わされる
+      コミュニケーションに疲れていませんか。
 
-    メールもなく手紙でやりとりしていた頃。
-    届くまでに時間がかかるからこそ、
-    一行一行に心をこめてペンを走らせ、
-    ワクワクしながらポストを覗きました。
+      %p メールもなく手紙でやりとりしていた頃。
+      届くまでに時間がかかるからこそ、
+      一行一行に心をこめてペンを走らせ、
+      ワクワクしながらポストを覗きました。
 
-    そんな心の通う文通を
-    このアプリではじめましょう。
+      %p そんな心の通う文通を
+      このアプリではじめましょう。
 
-    アプリをダウンロード
+      アプリをダウンロード
 
-    手紙をおくる
-    最初は誰に届くか
-    はわかりません。
+    .contents
+      %h3 手紙をおくる
 
-    手紙を受け取る
+      %p 最初は誰に届くか
+      はわかりません。
 
-    相手に届くまで
-    数日かかります。
+      %h3 手紙を受け取る
 
-    やりとりする
+      %p 相手に届くまで
+      数日かかります。
 
-    ゆっくりと友情を育みましょう
+      %h3 やりとりする
 
-    文通を使って、ワクワクしませんか？
+      %p ゆっくりと友情を育みましょう
 
-    アプリをダウンロード
+    .footer
+      .footer_left
+        文通を使って、ワクワクしませんか？
 
-    文通
+        アプリをダウンロード
 
-    Copyright © 2014 we-b Inc. All rights reserved.
+      .footer_center
+        文通
+      .fotter_right
+        Copyright © 2014 we-b Inc. All rights reserved.
