--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -4,46 +4,53 @@
     %meta{charset: "utf-8"}
   %body
     .main
-      %h1 文通
+      .main_left
+        %h1 文通
 
-      %h2 文通だからこそ、心が通う。
-      %p スマートフォンを開けば、
-      瞬時に誰かと繋がれる時代。
-      目まぐるしく交わされる
-      コミュニケーションに疲れていませんか。
+        %h2 文通だからこそ、心が通う。
+        %p スマートフォンを開けば、
+        瞬時に誰かと繋がれる時代。
+        目まぐるしく交わされる
+        コミュニケーションに疲れていませんか。
 
-      %p メールもなく手紙でやりとりしていた頃。
-      届くまでに時間がかかるからこそ、
-      一行一行に心をこめてペンを走らせ、
-      ワクワクしながらポストを覗きました。
+        %p メールもなく手紙でやりとりしていた頃。
+        届くまでに時間がかかるからこそ、
+        一行一行に心をこめてペンを走らせ、
+        ワクワクしながらポストを覗きました。
 
-      %p そんな心の通う文通を
-      このアプリではじめましょう。
+        %p そんな心の通う文通を\
+        このアプリではじめましょう。
 
-      アプリをダウンロード
+        %button アプリをダウンロード
+      .main_right
 
     .contents
-      %h3 手紙をおくる
+      .contents_left
+        %h3 手紙をおくる
 
-      %p 最初は誰に届くか
-      はわかりません。
+        %p 最初は誰に届くか
+        はわかりません。
 
-      %h3 手紙を受け取る
+      .contents_center
+        %h3 手紙を受け取る
 
-      %p 相手に届くまで
-      数日かかります。
+        %p 相手に届くまで
+        数日かかります。
 
-      %h3 やりとりする
+      .contents_right
+        %h3 やりとりする
 
-      %p ゆっくりと友情を育みましょう
+        %p ゆっくりと友情を
+        育みましょう
 
     .footer
       .footer_left
         文通を使って、ワクワクしませんか？
 
-        アプリをダウンロード
+        %button アプリをダウンロード
 
       .footer_center
         文通
+
       .fotter_right
         Copyright © 2014 we-b Inc. All rights reserved.
