--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -5,20 +5,33 @@
   %body
     .main
       .main_left
-        %h1 文通
+        %h1
+        文
+        %br
+        通
 
         %h2 文通だからこそ、心が通う。
-        %p スマートフォンを開けば、
+        %p
+        スマートフォンを開けば、
+        %br
         瞬時に誰かと繋がれる時代。
+        %br
         目まぐるしく交わされる
+        %br
         コミュニケーションに疲れていませんか。
 
-        %p メールもなく手紙でやりとりしていた頃。
+        %p
+        メールもなく手紙でやりとりしていた頃。
+        %br
         届くまでに時間がかかるからこそ、
+        %br
         一行一行に心をこめてペンを走らせ、
+        %br
         ワクワクしながらポストを覗きました。
 
-        %p そんな心の通う文通を\
+        %p
+        そんな心の通う文通を
+        %br
         このアプリではじめましょう。
 
         %button アプリをダウンロード
@@ -28,13 +41,17 @@
       .contents_left
         %h3 手紙をおくる
 
-        %p 最初は誰に届くか
+        %p
+        最初は誰に届くか
+        %br
         はわかりません。
 
       .contents_center
         %h3 手紙を受け取る
 
-        %p 相手に届くまで
+        %p
+        相手に届くまで
+        %br
         数日かかります。
 
       .contents_right
@@ -50,7 +67,9 @@
         %button アプリをダウンロード
 
       .footer_center
-        文通
+        文
+        %br
+        通
 
       .fotter_right
         Copyright © 2014 we-b Inc. All rights reserved.
