--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -5,7 +5,7 @@
   %body
     .main
       .main_buntsu
-        "logo.png"
+        %img{alt: "文通", src: "images/logo.png"}
 
       .main_left
         %h2 文通だからこそ、心が通う。
@@ -32,15 +32,14 @@
         %br
         このアプリではじめましょう。
 
-        %button01 "apple.png"
-        アプリをダウンロード
+        %img{alt: "アプリをダウンロード", src: "images/download.png"}
 
       .main_right
         %img{alt: "iphone", src: "images/iphone_header.png"}
 
     .contents
       .contents_left
-        "image01.png"
+        %img{alt: "手紙をおくる", src: "images/image01.png"}
         %h3 手紙をおくる
 
         %p
@@ -49,7 +48,7 @@
         はわかりません。
 
       .contents_center
-        "image02.png"
+        %img{alt: "手紙を受け取る", src: "images/image02.png"}
         %h3 手紙を受け取る
 
         %p
@@ -58,7 +57,7 @@
         数日かかります。
 
       .contents_right
-        "image03.png"
+        %img{alt: "やりとりする", src: "images/image03.png"}
         %h3 やりとりする
 
         %p ゆっくりと友情を
@@ -67,12 +66,10 @@
     .footer
       .footer_left
         文通を使って、ワクワクしませんか？
-
-        %button02 "apple.png"
-        アプリをダウンロード
+        %img{alt: "アプリをダウンロード", src: "images/download02.png"}
 
       .footer_center
-        "logo.png"
+        %img{alt: "文通", src: "images/logo-small.png"}
 
       .fotter_right
-        Copyright © 2014 we-b Inc. All rights reserved.
+        Copyright © 2015 div Inc. All rights reserved.
