--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -7,62 +7,100 @@ $color-text: #fff;
   src: url('Hannari.otf');
 }
 
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
+p {
+  margin: 0;
+}
+
 body{
-  width: 860px;
-  margin: 0 auto;
   background-color: $color-base;
   color: $color-text;
   font-family: 'Hannari';
 }
 
-.main{
-  height: 550px;
-  padding: 100px 30px 10px;
+#main {
+  padding-bottom: 100px;
+  border-bottom: 2px solid $color-accent;
+}
+#wrapper {
+  margin-top: 120px;
 }
 
-.main_buntsu{
-  width: 10%;
-  float: left;
+.main__logo {
+  text-align: center;
 }
-
-.main_left{
-  width: 40%;
-  float: left;
+.main__catchcopy {
+  h2 {
+    margin: 0;
+    font-size: 27px;
+  }
+  p {
+    line-height: 1.4;
+    font-size: 12px;
+  }
+  .description01 {
+    padding-top: 25px;
+  }
+  .description02, .description03 {
+    padding-top: 25px;
+  }
+  .main__download {
+    margin-top: 25px;
+    cursor: pointer;
+  }
 }
+// .main{
+//   height: 550px;
+//   padding: 100px 30px 10px;
+// }
 
-.main_right{
-  width: 50%;
-  float: left;
-}
+// .main_buntsu{
+//   width: 10%;
+//   float: left;
+// }
 
-.content{
+// .main_left{
+//   width: 40%;
+//   float: left;
+// }
 
-}
+// .main_right{
+//   width: 50%;
+//   float: left;
+// }
 
-.contents_left{
-  float: left;
-}
+// .content{
 
-.contents_right{
+// }
+
+// .contents_left{
+//   float: left;
+// }
+
+// .contents_right{
   
-}
+// }
 
-.contents_center{
-  float: left;
-}
+// .contents_center{
+//   float: left;
+// }
 
-.footer{
+// .footer{
 
-}
+// }
 
-.footer_left{
-  float: left;
-}
+// .footer_left{
+//   float: left;
+// }
 
-.footer_center{
-  float: left;
-}
+// .footer_center{
+//   float: left;
+// }
 
-.footer_right{
+// .footer_right{
 
-}
+// }
