Write CSS in contents section

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -38,31 +38,31 @@
         .right.col-sm-6
           %img{alt: "iphone", src: "images/iphone_header.png"}
 
-    / .contents
-    /   .contents_left
-    /     %img{alt: "手紙をおくる", src: "images/image01.png"}
-    /     %h3 手紙をおくる
+      #contents.row
+        .content.col-sm-4
+          %img{alt: "手紙をおくる", src: "images/image01.png"}
+          %h3 手紙をおくる
 
-    /     %p
-    /     最初は誰に届くか
-    /     %br
-    /     はわかりません。
+          %p
+          最初は誰に届くかは
+          %br
+          わかりません。
 
-    /   .contents_center
-    /     %img{alt: "手紙を受け取る", src: "images/image02.png"}
-    /     %h3 手紙を受け取る
+        .content.col-sm-4
+          %img{alt: "手紙を受け取る", src: "images/image02.png"}
+          %h3 手紙を受け取る
 
-    /     %p
-    /     相手に届くまで
-    /     %br
-    /     数日かかります。
+          %p
+          相手に届くまで
+          %br
+          数日かかります。
 
-    /   .contents_right
-    /     %img{alt: "やりとりする", src: "images/image03.png"}
-    /     %h3 やりとりする
+        .content.col-sm-4
+          %img{alt: "やりとりする", src: "images/image03.png"}
+          %h3 やりとりする
 
-    /     %p ゆっくりと友情を
-    /     育みましょう
+          %p ゆっくりと友情を
+          育みましょう
 
     / .footer
     /   .footer_left
