--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -24,8 +24,8 @@ body{
 
 #main {
   padding-bottom: 100px;
-  border-bottom: 2px solid $color-accent;
 }
+
 #wrapper {
   margin-top: 120px;
 }
@@ -53,6 +53,24 @@ body{
     cursor: pointer;
   }
 }
+
+#contents {
+  text-align: center;
+  padding: 80px 0 110px;
+  border-top: 2px solid $color-accent;
+  border-bottom: 2px solid $color-accent;
+
+  h3 {
+    margin: 25px 0;
+    letter-spacing: 8px;
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+}
+
 // .main{
 //   height: 550px;
 //   padding: 100px 30px 10px;
