--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -71,6 +71,19 @@ body{
   }
 }
 
+#footer {
+  text-align: center;
+  padding: 40px 0 45px;
+
+  .footer__download > p {
+    padding-bottom: 15px;
+  }
+  .footer__copyright > p {
+    font-family: Courier,sans-serif;
+    line-height: 75px;
+  }
+}
+
 // .main{
 //   height: 550px;
 //   padding: 100px 30px 10px;
