Delete comment and add wrapper

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,8 +1,8 @@
 !!!
 %html{lang: "ja"}
   %body
+    .wrapper
     #wrapper.container
-      // MAIN
       #main.row
         .main__wrapper.clearfix
           .main__left.clearfix
