Edit container > row > col

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -60,12 +60,12 @@ body{
     .description02, .description03 {
       padding-top: 25px;
     }
-    .main__download {
+    .bottom_content {
       margin-top: 25px;
       cursor: pointer;
     }
   }
-  .main__download {
+  .bottom_content {
     margin: 30px 0 0 110px;
   }
 
