--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -37,6 +37,7 @@
               %a{href: "#"}
                 %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
 
+      .container
         #contents
           .row
             .content.col-sm-4
@@ -60,6 +61,7 @@
               %p ゆっくりと友情を
               育みましょう
 
+      .container
         #footer
           .row
             .footer__item.footer__download.col-sm-5
