--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -2,37 +2,36 @@
   .container
     #main
       .row
-        .top_content.clearfix
-          .main__left.clearfix
-            .main__logo
-              %img{alt: "文通", src: "images/logo.png", srcset: "images/logo@2x.png 2x"}
-            .main__catchcopy
-              %h2 文通だからこそ、心が通う。
-              %p.description01
-                スマートフォンを開けば、
-                %br
-                瞬時に誰かと繋がれる時代。
-                %br
-                目まぐるしく交わされる
-                %br
-                コミュニケーションに疲れていませんか。
-              %p.description02
-                メールもなく手紙でやりとりしていた頃。
-                %br
-                届くまでに時間がかかるからこそ、
-                %br
-                一行一行に心をこめてペンを走らせ、
-                %br
-                ワクワクしながらポストを覗きました。
-              %p.description03
-                そんな心の通う文通を
-                %br
-                このアプリではじめましょう。
-          .main__right
-            %img{alt: "iphone", src: "images/iphone_header.png", srcset: "images/iphone_header@2x.png 2x"}
-        .bottom_content
-          %a{href: "#"}
-            %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
+        .top_content_left.col-sm-2
+          .main__logo
+            %img{alt: "文通", src: "images/logo.png", srcset: "images/logo@2x.png 2x"}
+        .top_content_center.col-sm-5
+          .main__catchcopy
+            %h2 文通だからこそ、心が通う。
+            %p.description01
+              スマートフォンを開けば、
+              %br
+              瞬時に誰かと繋がれる時代。
+              %br
+              目まぐるしく交わされる
+              %br
+              コミュニケーションに疲れていませんか。
+            %p.description02
+              メールもなく手紙でやりとりしていた頃。
+              %br
+              届くまでに時間がかかるからこそ、
+              %br
+              一行一行に心をこめてペンを走らせ、
+              %br
+              ワクワクしながらポストを覗きました。
+            %p.description03
+              そんな心の通う文通を
+              %br
+              このアプリではじめましょう。
+            %a{href: "#"}
+              %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
+        .top_content_right.col-sm-5
+          %img{alt: "iphone", src: "images/iphone_header.png", srcset: "images/iphone_header@2x.png 2x"}
 
   .container
     #contents
