--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -28,8 +28,9 @@
               そんな心の通う文通を
               %br
               このアプリではじめましょう。
-            %a{href: "#"}
-              %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
+            .bottom_content
+              %a{href: "#"}
+                %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
         .top_content_right.col-sm-5
           %img{alt: "iphone", src: "images/iphone_header.png", srcset: "images/iphone_header@2x.png 2x"}
 
