--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -66,7 +66,7 @@ body{
     }
   }
   .bottom_content {
-    margin: 30px 0 0 110px;
+    margin: 0;
   }
 
   @media screen and (max-width: 750px) {
