Add .top_content class

--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,7 +1,7 @@
 #wrapper
   .container
     #main
-      .row
+      .top_content.row
         .top_content_left.col-sm-2
           .main__logo
             %img{alt: "文通", src: "images/logo.png", srcset: "images/logo@2x.png 2x"}
