--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -28,7 +28,7 @@
               そんな心の通う文通を
               %br
               このアプリではじめましょう。
-            .bottom_content
+            .button_content
               %a{href: "#"}
                 %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
         .top_content_right.col-sm-5
