--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,11 +1,11 @@
 #wrapper
   .container
     #main
-      .top_content.row
-        .top_content_left.col-sm-2
+      .main_content.row
+        .main_content_left.col-sm-2
           .main__logo
             %img{alt: "文通", src: "images/logo.png", srcset: "images/logo@2x.png 2x"}
-        .top_content_center.col-sm-5
+        .main_content_center.col-sm-5
           .main__catchcopy
             %h2 文通だからこそ、心が通う。
             %p.description01
@@ -31,7 +31,7 @@
             .button_content
               %a{href: "#"}
                 %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
-        .top_content_right.col-sm-5
+        .main_content_right.col-sm-5
           %img{alt: "iphone", src: "images/iphone_header.png", srcset: "images/iphone_header@2x.png 2x"}
 
   .container
