--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -28,7 +28,7 @@
               そんな心の通う文通を
               %br
               このアプリではじめましょう。
-            .button_content
+            .btn_la
               %a{href: "#"}
                 %img{alt: "アプリをダウンロード", src: "images/download.png", srcset: "images/download@2x.png 2x"}
         .main_content_right.col-sm-5
@@ -64,7 +64,7 @@
         .footer__item.footer__download.col-sm-5
           %p
             文通を使って、ワクワクしませんか？
-          .btn
+          .btn_sm
             %img{alt: "アプリをダウンロード", src: "images/download02.png", srcset: "images/download02@2x.png 2x"}
         .footer__item.footer__logo.col-sm-2
           %img{alt: "文通", src: "images/logo-small.png", srcset: "images/logo-small@2x.png 2x"}
